--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>nicehash</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="host"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
